# geduino-ros

./: .gitmodules  README
darknet/: CMakeLists.txt  package.xml
darknet_cv/: CMakeLists.txt  package.xml
darknet_cv/msg/: Detection.msg  DetectionArray.msg  DetectionClass.msg
darknet_cv/src/: cv_conversion.h  yolo_detector.cpp  yolo_detector.h  yolo_detector_node.cpp
geduino/: CMakeLists.txt  installongeduino.sh  package.xml  scripts.readme
geduino/arduino/GeduinoShieldREV2/: Battery.cpp  Battery.h  Counter.cpp  GeduinoShieldREV2.ino  Loop.h  MedianFilter.cpp  PING.cpp  PING.h  TMP36.cpp  TMP36.h
geduino/arduino/GeduinoShieldREV4/: Battery.h  Counter.h  GeduinoShieldREV2.ino  GeduinoShieldREV4.ino  Led.cpp  Led.h  Loop.cpp  MedianFilter.h  PING.cpp  PING.h  Rate.cpp  Rate.h
geduino/arduino/GeduinoV3/: Counter.cpp  Counter.h  GeduinoV3.ino  Loop.cpp  Loop.h  PING.cpp  PING.h  Rate.cpp  Rate.h
geduino/arduino/PowerBoardREV3/: Button.cpp  Button.h  PowerBoardREV3.ino
geduino/config/: base_local_planner_params.yaml  complementary_filter_params.yaml  costmap_common_params.yaml  diagnostic_aggregator_params.yaml  ekf_localization_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  md25_params.yaml  move_base_params.yaml  mpu9150_params.yaml  odometry_params.yaml  qr_detector_params.yaml  r200_camera_driver_params.yaml  robot_pose_publisher_params.yaml  robot_state_publisher_params.yaml  rplidar_params.yaml  rtabmap_params.yaml  shield_params.yaml  system_monitor_params.yaml  teleop_web_params.yaml  yolo_detector_params.yaml
geduino/launch/: base_configuration.launch  bringup_full.launch  configuration.launch  gmapping.launch  machines.launch  move_base.launch  navigation_stack.launch  odometry.launch  perception.launch  r200_camera.launch  rtabmap.launch  rtabmap_stack.launch  sensor.launch  slam_stack.launch  system_monitor.launch
geduino/rviz/: geduino-base-config.rviz  geduino-full.rviz  geduino-rtabmap-stack.rviz  geduino.rviz
geduino/urdf/: geduino.urdf
geduino_diagnostic/: CMakeLists.txt  package.xml
geduino_diagnostic/config/: diagnostic_params.yaml
geduino_diagnostic/launch/: diagnostic.launch
geduino_diagnostic/src/: geduino_diagnostic_node.cpp
geduino_diagnostic_msgs/: CMakeLists.txt  package.xml
geduino_diagnostic_msgs/msg/: Counter.msg  Diagnostics.msg  Power.msg  ProcStat.msg  SensorStat.msg  StampedDiagnostics.msg  StampedStatus.msg  Status.msg
geduino_msgs/: CMakeLists.txt  package.xml
geduino_msgs/msg/: Power.msg  StampedPower.msg
geduino_navigation/: CMakeLists.txt  package.xml
geduino_navigation/config/: base_local_planner_params.yaml  camera_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  gmapping_params.yaml  hector_mapping_params.yaml  imu_params.yaml  local_costmap_params.yaml  move_base_params.yaml  odometry_params.yaml  vel2speeds_params.yaml
geduino_navigation/launch/: geduino_configuration.launch  geduino_slam_gmapping.launch  geduino_slam_hector.launch  geduino_static_transformation.launch  gmapping.launch  hector_mapping.launch  move_base.launch  navigation.launch
geduino_perception/: CMakeLists.txt  package.xml
geduino_perception/config/: cv_camera_params.yaml  perception_params.yaml  qr_detector_params.yaml
geduino_perception/launch/: perception.launch
geduino_perception/src/: camera_node.cpp  cvtype2rosencoding.h  face_detection_node.cpp
geduino_perception_msgs/: CMakeLists.txt  package.xml
geduino_perception_msgs/msg/: Faces.msg  StampedFaces.msg
geduino_teleop/: CMakeLists.txt  package.xml
geduino_teleop/src/: teleop_key.cpp
md25/: CMakeLists.txt  package.xml
md25/config/: md25_params.yaml  odometry_common_params.yaml  odometry_params.yaml  vel2speeds_params.yaml
md25/launch/: md25.launch
md25/msg/: Euler.msg  StampedEuler.msg
md25/src/: complementary_filter_node.cpp  geometry_conversion.h  md25.cpp  md25.h  md25_console.cpp  md25_diagnostic_node.cpp  md25_node.cpp  odom_to_euler_node.cpp  odometry.cpp  odometry.h  odometry_node.cpp  rolling_window.cpp  rolling_window.h  tf2_imu_message.h  vel2speeds_node.cpp
md25_msgs/: CMakeLists.txt  package.xml
md25_msgs/msg/: Encoders.msg  Speeds.msg  StampedEncoders.msg  StampedEncodersWithSpeeds.msg  StampedSpeeds.msg  StampedStatus.msg  Status.msg
mpu9150/: CMakeLists.txt  package.xml
mpu9150/config/: mpu9150_params.yaml
mpu9150/launch/: mpu9150.launch
mpu9150/src/: h  imu_node.cpp  imu_quaternion_to_euler_node.cpp  mpu9150.cpp  mpu9150.h  mpu9150.h.save  mpu9150_diagnostic_node.cpp  mpu9150_node.cpp  types.h  utility.c  utility.h
mpu9150_msgs/: CMakeLists.txt  package.xml
mpu9150_msgs/msg/: Int16Vector3.msg  Motion9.msg  StampedMotion9.msg  StampedStatus.msg  Status.msg
range_layer/: CMakeLists.txt  costmap_plugins.xml  package.xml
range_layer/cfg/: RangeLayer.cfg
range_layer/include/range_layer/: range_layer.h
range_layer/src/: range_layer.cpp
rplidar/: CMakeLists.txt  package.xml
rplidar/sdk/: README.txt
rplidar/sdk/include/: rplidar.h  rplidar_cmd.h  rplidar_driver.h  rplidar_protocol.h  rptypes.h
rplidar/sdk/src/: rplidar_driver.cpp  rplidar_driver_serial.h  sdkcommon.h
rplidar/sdk/src/arch/win32/: arch_win32.h  net_serial.cpp  net_serial.h  timer.cpp  timer.h  winthread.hpp
rplidar/sdk/src/hal/: abs_rxtx.h  event.h  locker.h  thread.cpp  thread.h  util.h
rplidar/src/: gpio.cpp  gpio.h  rplidar_node.cpp  rplidar_off.c
udoo_camera/: CMakeLists.txt  package.xml
udoo_camera/src/: camera_node.cpp  cvtype2rosencoding.h
zxing/: CMakeLists.txt  package.xml
zxing/src/zxing/: MatSource.cpp  MatSource.h
zxing_cv/: CMakeLists.txt  package.xml  qr_detector_nodelet.xml
zxing_cv/cfg/: QRDetector.cfg
zxing_cv/launch/: zxing_qrdetector.launch
zxing_cv/msg/: QRCode.msg  QRCodeArray.msg  StampedQRCode.msg
zxing_cv/src/: cv_conversion.h  qr_detector.cpp  qr_detector.h  qr_detector_node.cpp  qr_detector_nodelet.cpp
