<?xml version="1.0"?>

<!-- 
 geduino/package.xml

 Copyright (C) 2015 Alessandro Francescon
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<package>

  <name>geduino</name>
  <version>1.0.0</version>
  <description>The Geduino ROS package</description>
  <license>GPL</license>

  <url type="blog">http://www.geduino.org</url>

  <author email="alessandro.francescon@gmail.com">Alessandro Francescon</author>
  <maintainer email="alessandro.francescon@gmail.com">Alessandro Francescon</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>md25</run_depend>
  <run_depend>rplidar</run_depend>
  <run_depend>rosserial_python</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>zxing</run_depend>
  <run_depend>range_layer</run_depend>
  <run_depend>system_monitor</run_depend>
  <run_depend>realsense_camera</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>rtabmap_ros</run_depend>
  <run_depend>diagnostic_aggregator</run_depend>
  
  <export>
  </export>

</package>
