<?xml version="1.0"?>

<!-- 
 md25/package.xml

 Copyright (C) 2015 Alessandro Francescon
 
 This program is free software: you can redistribute it and/or modify
 it under the terms of the GNU General Public License as published by
 the Free Software Foundation, either version 3 of the License.
 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
 
 You should have received a copy of the GNU General Public License
 along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<package>

  <name>md25</name>
  <version>1.0.0</version>
  <description>The MD25 package</description>
  <license>GPL</license>

  <url type="blog">http://geduino.blogspot.it</url>

  <author email="alessandro.francescon@gmail.com">Alessandro Francescon</author>
  <maintainer email="alessandro.francescon@gmail.com">Alessandro Francescon</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>md25_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>md25_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>tf2</run_depend>

  <export>
  </export>

</package>
